# tritrpc

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
TritRPC-v1-full/: README.md
TritRPC-v1-full/docs/: REPOSITORY_GUIDE.md  THEORY.md
docs/: REPOSITORY_GUIDE.md  THEORY.md  audit_tritrpc_v1_parity.md  integration_readiness_checklist.md
go/tritrpcv1/: avrodec.go  avroenc.go  envelope.go  envelope_decode.go  fixtures_test.go  go.sum  pathb_dec.go  tleb3.go  tritpack243.go  tritrpcv1_test.go
go/tritrpcv1/cmd/trpc/: main.go
rust/tritrpc_v1/: Cargo.toml
rust/tritrpc_v1/src/: lib.rs
rust/tritrpc_v1/tests/: fixtures.rs  vectors.rs
spec/: README-full-spec.md
