[package]
name = "tritrpc_v1"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TritRPC v1 reference (Rust): TritPack243, TLEB3, Envelope + AEAD (XChaCha20-Poly1305)."

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["xchacha20poly1305"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
subtle = "2.5"
